# Algo-Tetris-BF

./: CMakeLists.txt  Makefile  example  fillit.h  invalid  main.c  makefile  reader.c  solver.c  sort_list.c  validator.c
includes/: fillit.h
libft/: main  main.c  makefile
libft/includes/: libft.h
libft/io/: get_next_line.h.gch
libft/main.dSYM/Contents/Resources/DWARF/: main
libft/practice_dir/: main
libft/string/: ft_strlen.c
libft/utils/: ft_sqrt.c
src/: grid.c  main.c  reader.c  solver.c  sort_list.c  validator.c
